fix: adapt icons between light and dark mode

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -4,6 +4,8 @@ $white-color: #fff;
 // BACKGROUND COLORS
 $light-color: #fff;
 $dark-color: #000033;
+$hover-light-color: #ccc;
+$hover-dark-color: #000;
 
 // HEADING COLORS
 $light-text-heading: #272341; 
